* Nov 29 2000 hship

Add reportException() method to ExceptionAnalyzer, and change AbstractApplication
to invoke it (intead of doing the work itself).

* Nov 22 2000 hship

Add the InsertText component.

* Nov 20 2000 hship

Release 0.2.6

* Nov 17 2000 hship

Fix typo in exception message for unreferenced components.
Fix bug in ImageButton that caused it to be confused about which ImageButton was clicked if
a form contains more than one.
Cache ExternalAssets in the PageSource (as with FieldBinding and StaticBinding),
so that duplicate external assets will be represented only once.  This is useful when
a commonly used component (such as a border) is used on multiple pages.

* Nov 13 2000 hship

Allow static bindings to be pooled the same as field bindings.
Make the Rollover component only emit a "name" attribute if it is dynamic 
(i.e., has both an image and a focus and responds to mouse overs).  It was emitting an empty name attribute.

* Nov 10 2000 hship

Change the behavior of Forms and Form components slightly, such that it is possible
to write more sophisticated JavaScript event handlers.

* Nov 10 2000 hship

Release 0.2.5

* Nov 6 2000 hship

Add a refresh parameter to the Shell component, which allows for easy automatically refreshing pages.

* Nov 1 2000 hship

Improve exception reporting when an Insert component is unable to format its value.

* Nov 1 2000 hship

Change the reset component to not wipe out the session, simply force a refresh of all HTML templates and
component specifications.  It now encodes the currency page as well.
Fix some Javadoc errors.

* Nov 1 2000 hship

Merge PrimixFoundation into Tapestry.  Keeping them seperate had little value.
Change EnumPropertySelectionModel to require that the ResourceBundle be passed in
(since it can't always resolve the bundle, due to classloader issues).
Switch over to Servlet 2.2 APIs.

* Oct 25 2000 hship

Add raw parameter to Insert component.
Make some overdue documentation updates.
